--- a/index.html
+++ b/index.html
@@ -235,13 +235,15 @@
       <div class="outline"></div>
       <div class="content">
         <span class="char state-1">
-          <span data-label="P" style="--i: 1">P</span>
+          <span data-label="C" style="--i: 1">C</span>
           <span data-label="H" style="--i: 2">H</span>
-          <span data-label="Y" style="--i: 3">Y</span>
-          <span data-label="S" style="--i: 4">S</span>
+          <span data-label="E" style="--i: 3">E</span>
+          <span data-label="M" style="--i: 4">M</span>
           <span data-label="I" style="--i: 5">I</span>
-          <span data-label="C" style="--i: 6">C</span>
-          <span data-label="S" style="--i: 7">S</span>
+          <span data-label="S" style="--i: 6">S</span>
+          <span data-label="T" style="--i: 7">T</span>
+          <span data-label="R" style="--i: 7">R</span>
+          <span data-label="Y" style="--i: 7">Y</span>
           </span>
   
         <div class="icon">
